--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-messaging</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
