--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/instant-message
+    url: jdbc:postgresql://localhost:5432/instant-message
     username: postgres
     password: postgres
   jpa:
@@ -9,7 +9,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
@@ -24,6 +24,9 @@ spring:
   servlet:
     multipart:
       max-file-size: 50MB
+
+springdoc:
+  default-produces-media-type: application/json
 
 application:
   file:
