--- a/instant-message-ui/package.json
+++ b/instant-message-ui/package.json
@@ -17,7 +17,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "bootstrap": "^5.3.3",
+    "keycloak-js": "^26.1.3",
+    "ng-openapi-gen": "^0.52.0",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
