notification component and some fixes

--- a/instant-message-ui/angular.json
+++ b/instant-message-ui/angular.json
@@ -80,6 +80,7 @@
           "options": {
             "polyfills": [
               "zone.js",
+              "src/window-global-fix.ts",
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
